Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5224

Lustre client build failed with Mellanox OFED

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0, Lustre 2.5.3
    • Lustre 2.4.1, Lustre 2.5.0, Lustre 2.5.1
    • SLES11 SP3 X86_64, with MLNX_OFED_LINUX-2.2-1.0.1
    • 3
    • 14558

      I am try to compile lustre client rpms on SLES11 SP3 with the MLNX_OFED-2.2:
      1. ./configure --disable-server --disable-test --with-o2ib=/usr/src/ofa_kernel/default/
      It success,
      2. make, it failed with this message:
      In file included from /usr/src/linux-3.0.76-0.11/include/linux/netdevice.h:34,
      from /usr/src/linux-3.0.76-0.11/include/net/sock.h:50,
      from /home/lustre-hpdd/lnet/klnds/o2iblnd/o2iblnd.h:66,
      from /home/lustre-hpdd/lnet/klnds/o2iblnd/o2iblnd.c:41:
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:27: error: ‘LINUX_BACKPORT’ declared as function returning a function
      cc1: warnings being treated as errors
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:27: error: parameter names (without types) in function declaration
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:29: error: ‘LINUX_BACKPORT’ declared as function returning a function
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:29: error: parameter names (without types) in function declaration
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:31: error: ‘LINUX_BACKPORT’ declared as function returning a function
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:31: error: parameter names (without types) in function declaration
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:34: error: ‘LINUX_BACKPORT’ declared as function returning a function
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:34: error: parameter names (without types) in function declaration
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:37: error: ‘LINUX_BACKPORT’ declared as function returning a function
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:37: error: parameter names (without types) in function declaration
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:39: error: ‘LINUX_BACKPORT’ declared as function returning a function
      /usr/src/ofa_kernel/default/include/linux/pm_qos_params.h:39: error: parameter names (without types) in function declaration
      In file included from /usr/src/linux-3.0.76-0.11/include/net/sock.h:50,
      from /home/lustre-hpdd/lnet/klnds/o2iblnd/o2iblnd.h:66,
      from /home/lustre-hpdd/lnet/klnds/o2iblnd/o2iblnd.c:41:
      /usr/src/linux-3.0.76-0.11/include/linux/netdevice.h:1064: error: field ‘pm_qos_req’ has incomplete type
      make[9]: *** [/home/lustre-hpdd/lnet/klnds/o2iblnd/o2iblnd.o] Error 1
      make[8]: *** [/home/lustre-hpdd/lnet/klnds/o2iblnd] Error 2
      make[7]: *** [/home/lustre-hpdd/lnet/klnds] Error 2
      make[6]: *** [/home/lustre-hpdd/lnet] Error 2
      make[5]: *** [_module_/home/lustre-hpdd] Error 2
      make[4]: *** [sub-make] Error 2
      make[3]: *** [all] Error 2
      make[3]: Leaving directory `/usr/src/linux-3.0.76-0.11-obj/x86_64/default'
      make[2]: *** [modules] Error 2
      make[2]: Leaving directory `/home/lustre-hpdd'
      make[1]: *** [all-recursive] Error 1
      make[1]: Leaving directory `/home/lustre-hpdd'
      make: *** [all] Error 2

            mdiep Minh Diep - TLC
            gnlwlb wu libin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: